fix: remove Google Button flickering

--- a/p3-react-app/src/index.css
+++ b/p3-react-app/src/index.css
@@ -58,3 +58,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+#g_id_onload > div > div:first-child {
+  display: none;
+}
